--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,16 +2,37 @@
 # Copy this to .env and fill in your actual values
 
 # =========================
-# Mapbox API Configuration
+# REQUIRED: Mapbox API
 # =========================
-# Required for distance and directions API
+# Required for distance, directions, and geocoding
 # Get free token from: https://mapbox.com/account/tokens
 TOKEN=pk.your_mapbox_api_token_here
 
 # =========================
+# Gemini AI (Recommended)
+# =========================
+# Used for tourist AI-powered recommendations within 50km
+# Get free key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# =========================
+# Sarvam AI (Optional)
+# =========================
+# Used for Indian language speech-to-text and translation
+# Get key from: https://sarvam.ai
+SARVAM_API_KEY=your_sarvam_api_key_here
+
+# =========================
+# HuggingFace API (Optional)
+# =========================
+# Used for Whisper speech-to-text transcription
+# Get key from: https://huggingface.co/settings/tokens
+HUGGINGFACE_API_KEY=hf_your_huggingface_api_key_here
+
+# =========================
 # OpenAI Configuration (Optional)
 # =========================
-# Used for advanced AI-powered itineraries
+# Alternative for AI-powered itineraries (if not using Gemini)
 # Get key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=sk-your_openai_api_key_here
 
@@ -60,6 +81,9 @@ FRONTEND_ORIGINS=http://localhost:5500,http://127.0.0.1:5500,http://localhost:30
 # Notes
 # =========================
 # 1. Mapbox TOKEN is REQUIRED for the app to function
-# 2. OpenAI key is optional - system uses local fallback if not provided
-# 3. Ollama must be running locally if using that LLM backend
-# 4. Google Maps is optional - Mapbox is the primary traffic API
+# 2. Gemini API is RECOMMENDED for tourist AI recommendations
+# 3. Sarvam AI enables better Indian language support
+# 4. HuggingFace enables Whisper transcription
+# 5. OpenAI is optional - Gemini is preferred for this app
+# 6. Ollama must be running locally if using that LLM backend
+# 7. Google Maps is optional - Mapbox is the primary traffic API
