Updated readme, env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,52 +4,48 @@
 # =========================
 # REQUIRED: Mapbox API
 # =========================
-# Required for distance, directions, and geocoding
+# Required for core routing features: distance, directions, and geocoding.
 # Get free token from: https://mapbox.com/account/tokens
 TOKEN=pk.your_mapbox_api_token_here
 
 # =========================
-# Gemini AI (Recommended)
+# AI & Intelligence APIs (Highly Recommended)
 # =========================
-# Used for tourist AI-powered recommendations within 50km
+
+# 1. Gemini AI (Secondary Recommendation Engine)
+# Used for tourist AI-powered recommendations within 50km radius.
 # Get free key from: https://makersuite.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# =========================
-# Sarvam AI (Optional)
-# =========================
-# Used for Indian language speech-to-text and translation
-# Get key from: https://sarvam.ai
-SARVAM_API_KEY=your_sarvam_api_key_here
+# 2. OpenAI (Primary Recommendation Engine)
+# Used as a high-quality alternative for AI-powered itineraries.
+# Get key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-your_openai_api_key_here
 
-# =========================
-# HuggingFace API (Optional)
-# =========================
-# Used for Whisper speech-to-text transcription
+# 3. Google Maps API (Real-time Traffic)
+# Used for accurate real-time traffic data (preferred over Mapbox for traffic).
+# Get key from: https://cloud.google.com/maps-platform
+# APIs required: Directions API, Traffic API
+GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# 4. Hugging Face (Speech Recognition)
+# Used for Whisper-large-v3 speech-to-text (multi-language support).
 # Get key from: https://huggingface.co/settings/tokens
 HUGGINGFACE_API_KEY=hf_your_huggingface_api_key_here
 
 # =========================
-# OpenAI Configuration (Optional)
+# Optional / Additional APIs
 # =========================
-# Alternative for AI-powered itineraries (if not using Gemini)
-# Get key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=sk-your_openai_api_key_here
 
-# =========================
-# Ollama Configuration (Optional)
-# =========================
-# For local LLM-based itinerary generation (free, open-source)
-# Install from: https://ollama.ai
+# Sarvam AI (Indian Language Support)
+# Used for specialized Indian language speech-to-text and translation.
+# Get key from: https://sarvam.ai
+SARVAM_API_KEY=your_sarvam_api_key_here
+
+# Ollama Configuration (Local LLM)
+# For local AI processing without cloud costs.
 # Default: http://localhost:11434
 OLLAMA_URL=http://localhost:11434
-
-# =========================
-# Google Maps API (Optional)
-# =========================
-# Used for real-time traffic data (alternative to Mapbox)
-# Get key from: https://cloud.google.com/maps-platform
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
 # =========================
 # Application Settings
@@ -73,17 +69,6 @@ FRONTEND_PORT=5500
 FRONTEND_ORIGINS=http://localhost:5500,http://127.0.0.1:5500,http://localhost:3000
 
 # =========================
-# Database (Future Use)
+# Database
 # =========================
 # DATABASE_URL=postgresql://user:password@localhost:5432/travel_assistant
-
-# =========================
-# Notes
-# =========================
-# 1. Mapbox TOKEN is REQUIRED for the app to function
-# 2. Gemini API is RECOMMENDED for tourist AI recommendations
-# 3. Sarvam AI enables better Indian language support
-# 4. HuggingFace enables Whisper transcription
-# 5. OpenAI is optional - Gemini is preferred for this app
-# 6. Ollama must be running locally if using that LLM backend
-# 7. Google Maps is optional - Mapbox is the primary traffic API
